--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ regex = "1.10.2"
 grid = { version = "*", path = "grid" }
 paste = "1.0.15"
 clap = { version = "4.5.4", features = ["derive"] }
+cached = "0.51.3"
