--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ paste = "1.0.15"
 clap = { version = "4.5.4", features = ["derive"] }
 cached = "0.51.3"
 num-integer = "0.1.46"
+simplelog = "0.12.2"
+log = "0.4.21"
